# cuda-image-enhacement

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/manifests/: shift.json
docs/: algorithm-specification.md  data-validation.md  expanded-buffer-layout.md  validation.md
include/tgpu/: image.hpp  image_io.hpp  pipeline.hpp
reference/: requirements.txt  tescan_digital_resolution.py
scripts/: compare-isolated-stages.ps1  tgpu.py
scripts/tgpu/: __init__.py  compare.py  manifest.py  paths.py  reference_pipeline.py  stage_viewer.py  verify.py
src/: main.cpp  stream_viewer.cpp  stream_viewer.hpp  stream_viewer_gl.cpp  stream_viewer_gl.hpp  stream_viewer_gl_cuda.cu
src/cli/: cli_options.cpp  cli_options.hpp  cli_types.hpp  processing.cpp  processing.hpp  reporting.cpp  reporting.hpp
src/common/: image_io.cpp
src/gpu/: pipeline_gpu.cpp
src/gpu/detail/: buffer_io.cu  capture.cu  compute.hpp  indexing.hpp  input.cu  kernel_cache.hpp  kernel_grid.hpp  memory.cu  pipeline.cu  pipeline_api.hpp  runtime.hpp  stage_definition.hpp  stage_executor.hpp  types.hpp
src/gpu/stages/: histogram_stretch.cu  non_local_means.cu  richardson_lucy.cu  unsharp_mask.cu
tests/cpp/: pipeline_tests.cpp
tests/cpp/core/: image_tests.cpp  pipeline_tests.cpp
tests/cpp/stages/: histogram_stretch_stage_tests.cpp  nlm_stage_tests.cpp  richardson_lucy_stage_tests.cpp  unsharp_mask_stage_tests.cpp
